dark mode color correction - ui improvememnts

--- a/Styles/Admin/AdminLeftSider.scss
+++ b/Styles/Admin/AdminLeftSider.scss
@@ -1,6 +1,5 @@
 .adminLeftDrawer {
   overflow-y: scroll;
-
   &::-webkit-scrollbar {
     background-color: transparent;
     width: 5px;
@@ -12,7 +11,7 @@
   }
   &::-webkit-scrollbar-thumb {
     border-radius: 15px;
-    background-color: rgba(157, 157, 157, 0.2);
+    background-color: #D1D5DB;
   }
 }
 @media (hover: none) {
@@ -21,7 +20,7 @@
       width: 8px;
     }
     &::-webkit-scrollbar-thumb {
-      background-color: rgba(181, 181, 181, 0.2);
+      background-color: #D1D5DB;
     }
   }
 }
